k8s/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-world
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    # - host: your-app-domain.com  # Replace with your domain
      - http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: hello-world-app
                  port:
                    number: 80
